--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
   compileSdkVersion 27
   buildToolsVersion '26.0.2'
   defaultConfig {
-    applicationId 'com.sqisland.tutorial.recipes'
+    applicationId 'com.thedancercodes.tutorial.recipes'
     minSdkVersion 14
     targetSdkVersion 27
     versionCode 1
