--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 
 dependencies {
   compile 'com.android.support:appcompat-v7:27.0.2'
+  compile 'com.android.support:recyclerview-v7:27.0.2'
   testCompile 'junit:junit:4.12'
 
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
