[FEATURE] Mockito Setup: [+] Include Mockito in app/build.gradle as a dependency using testCompile -> corresponds to /test/ folder.
[+] In RecipePresenterTest declare variables as private fields for RecipeStore, Favorites, RecipeContract.View & RecipePresenter

[+] Instantiate RecipeStore, Favorites and RecipeContract.View using Mockito.
[+] Instantiate RecipePresenter without Mockito because we want to test the actual Presenter and not a Stub.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
   compile 'com.android.support:appcompat-v7:27.0.2'
   compile 'com.android.support:recyclerview-v7:27.0.2'
   testCompile 'junit:junit:4.12'
+  testCompile 'org.mockito:mockito-core:2.13.0'
 
   androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
     // To avoid version conflict with the support-annotations included by appcompat in line 23.
